<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/when_is_this_record"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/secundary"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <Spinner
            android:id="@+id/month_year_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <ImageButton
            android:id="@+id/prev_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:rotation="90"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous_month"
            android:src="@drawable/ic_arrow_down" />

        <ImageButton
            android:id="@+id/next_month_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:rotation="-90"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_month"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sunday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_monday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tuesday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wednesday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thursday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_friday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_saturday_short"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:rowCount="6"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_cancel"
            android:background="@drawable/rounded_button_shadow"
            android:layout_weight="1"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            android:background="@drawable/rounded_button_shadow"
            android:layout_weight="1"
            android:textColor="@color/primary" />
    </LinearLayout>
</LinearLayout>
