<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:textSize="@dimen/text_size_normal"
        android:padding="16dp"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_time"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginBottom="@dimen/spacing_small"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:textColor="@color/primary_green"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@drawable/rounded_button_shadow_green"
            android:textColor="@color/primary_green"
            android:text="@string/btn_confirm"/>
    </LinearLayout>

</LinearLayout> 