<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image_source"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/secundary"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_camera_edit"
        android:drawableTint="@color/primary"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/camera"
        android:textSize="@dimen/button_size" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_gallery_edit"
        android:drawableTint="@color/primary"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/gallery"
        android:textSize="@dimen/button_size" />

    <Button
        android:id="@+id/btn_delete_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_rounded"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_xmark"
        android:drawableTint="@color/primary"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="@string/delete_image"
        android:visibility="gone"

        android:textSize="@dimen/button_size" />

</LinearLayout>