<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_rounded_top"
    android:padding="@dimen/spacing_large">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@color/secundary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/options_icons_size"
            android:layout_height="@dimen/options_icons_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/btn_back"
            app:tint="@color/secundary" />

        <TextView
            android:id="@+id/text_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings"
            android:textColor="@color/secundary"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:gravity="center" />

    </RelativeLayout>

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:textSize="@dimen/text_size_normal"
        android:padding="16dp"
        android:thumbTint="@color/switch_track_color"
        android:textColor="@color/secundary"
        android:trackTint="@color/switch_track_color"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/secundary"
        android:layout_marginBottom="@dimen/spacing_normal"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:padding="16dp"
        android:theme="@style/TimePickerTheme"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginBottom="@dimen/spacing_large"
        android:enabled="false" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_confirm"
            style="@style/RoundedConfirmButton"
            android:text="@string/btn_confirm" />
    </LinearLayout>
</LinearLayout>
